small alignment issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3280,7 +3280,7 @@ html.no-csstransitions .hero-content {
 
 .s-footer .footer-contacts {
     margin-top: 7.2rem;
-    margin-left: 8.33333%;
+    margin-left: 5%;
 }
 
 
